# CeLux

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  benchmark_comparison.py  benchmark_pipelines.py  build.py  debug_quality.py  pyproject.toml  quality_comparison.py  test_float16_encoding.py  test_hevc_nvenc.py
.github/workflows/: benchmark_quality.yml  build_wheel.yml  createRelease.yaml  createWheel.yaml  createWheelUpdated.yaml
celux/: __init__.py  _celux.pyi  batch.py  color.py
cmake/: Findlibyuv.cmake
docs/: CHANGELOG.md  analysis_report.md  usage.md
examples/: batch_example.py  ffmpeg_pipeline.py
include/CeLux/: BatchDecoder.hpp  Factory.hpp  Logger.hpp
include/CeLux/backends/: Decoder.hpp  Decoders.hpp  Encoder.hpp
include/CeLux/backends/cuda/: Decoder.hpp  NV12ToRGB.cuh  RGBToNV12.cuh
include/CeLux/conversion/cpu/: AutoToRGB.hpp  AutoToYUV.hpp  CPUConverters.hpp  RGBToAuto.hpp  RGBToAutoLibyuv.hpp
include/CeLux/conversion/gpu/: RGBToAutoGPU.hpp
include/CeLux/python/: VideoEncoder.hpp  VideoReader.hpp
src/CeLux/: BatchDecoder.cpp  Frame.cpp
src/CeLux/backends/: Decoder.cpp  Encoder.cpp
src/CeLux/backends/cuda/: Decoder.cpp  NV12ToRGB.cu  RGBToNV12.cu
src/CeLux/python/: Bindings.cpp  VideoEncoder.cpp  VideoReader.cpp
tests/: bench_seeking.py  benchmark_backend_speed.py  benchmark_libyuv.py  benchmark_quality.py  test_all_pixel_formats.py  test_backend.py  test_batch_support.py  test_color_difference.py  test_cuda_color_formats.py  test_cuda_pipeline.py  test_frame_at.py  test_get_item.py  test_nvdec_pix_fmts.py  test_nvenc.py  test_prefetch_api.py  test_reconfigure_api.py
tools/: download_ffmpeg.ps1  verify_cuda.py
